--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         </div>
                         <img src="assets/image.png" alt="">
                         <div class="description">
-                            <h1>Tenis tal</h1>
-                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                            <h2>Tenis tal</h1>
+                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
                         </div>
                         
                     </div>
@@ -30,8 +30,11 @@
                 
             </div>
         </section>
-        <section class="produtos">
-
+        <section class="products">
+            <div class="cube" id="c1"></div>
+            <div class="cube" id="c2"></div>
+            <div class="cube" id="c3"></div>
+            <div class="cube" id="c4"></div>
         </section>
     </main>
     <footer>
